# cpp-socket-tcp

./: CMakeLists.txt  README.md  client-app.cpp  server-app.cpp
lib/: CMakeLists.txt
lib/include/: node-ipv4.h  tcp-client.h  tcp-server.h
lib/src/: node-ipv4.cpp  tcp-client.cpp  tcp-server.cpp
